# dji_naza

./: .gitignore  CMakeLists.txt  all.hpp  main.cpp  plot.py
lib/: base.cpp  base.hpp  kml.cpp  kml.hpp  raw_xml.cpp  raw_xml.hpp  super_stend_xml.cpp  super_stend_xml.hpp  xml.cpp  xml.hpp
resources/: about_dialog.ui  convert_dialog.ui  main_window.ui  resources.qrc
ui/: about_dialog.cpp  about_dialog.hpp  convert_dialog.cpp  convert_dialog.hpp  main_window.cpp  main_window.hpp
ui/QProgressIndicator/: QProgressIndicator.cpp  QProgressIndicator.h
